# okin

./: .clangd  .gitignore  .okin_config_cache  CMakeLists.txt  README.md  callgrind.out.2949
core/: core.cpp  test_cases.sh
docs/: index.html  style.css
llm/: okin_llm.py
llm/inference/: okin_llm.py
llm/model/: dataset_gen.py  fine_tune.py  fine_tune_colab.ipynb
llm/model/data/: llm_output.txt  okin_dataset.jsonl
prompt/: 01_okin_doc.txt  02_okin_opcodes.txt  03_okin_examples.txt  okin_activation.txt  okin_doc.txt  okin_examples.txt  okin_opcodes.txt
src/compiler/: chunk.c  chunk.h  compiler.c  compiler.h  scope.c  scope.h
src/interpreter/: interpreter.cpp  interpreter.hpp  interpreter_opcodes.cpp
src/lexer/: lexer.c  lexer.h
src/opcodes/: opcodes.h
src/parser/: parser.c  parser.h
src/parser/util/: arena.c  arena.h
src/preprocessor/: okin_config.c  okin_config.h
src/util/: arena.c  arena.h
src/vm/: opcode.h  value.c  value.h  vm.c  vm.h
testing/: core.cpp  lexer.c
unfolding/: unfolder_lang.txt
webpage/: okin_web.css  okin_web.html
